assets/css/modules/_form.scss
//
// Form
//
.form-headline {
    margin-bottom: $spacer * 1.5;
}
.form-buttons {
    margin-top: $spacer * 2.5;
    .btn + .btn {
        margin-left: 0.25rem;
    }
}
.form-buttons-text {
    display: inline-block;
    vertical-align: middle;
    margin-left: 1rem;
}

//
// Form Collection
//
[data-formtype="collection"] {
    > .form-group {
        border: 1px solid rgba(0,0,0,0.15);
        padding: 1.5em;
        legend {
            width: auto;
            max-width: none;
            background-color: #f2f2f2;
            margin: -1.5em;
            margin-bottom: 1.5em;
            padding-left: 1.5em;
            padding-right: 1.5em;
        }
        .btn {
            margin-top: 1rem;
        }
    }
    > .btn {
        margin-top: 1rem;
    }
}

//
// Custom Forms
//
.custom-control-label-hascount {
    display: flex;
}
.custom-control-label-title {
    flex-grow: 1;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}
.custom-control-label-count {
    flex-shrink: 0;
    margin-left: 1rem
}

// Forms in Cards
.card-body {
    form {
        > div > .form-group:last-of-type {
            margin-bottom: 0;
        }
    }
}

// Corrections
label {
    *:last-child {
        margin-bottom: 0;
    }
}

